--- a/package.json
+++ b/package.json
@@ -35,7 +35,26 @@
     "ngx-markdown": "^10.1.1",
     "ngx-moment": "^5.0.0",
     "ngx-monaco-editor": "^8.1.1",
-    "rangy": "^1.3.0"
+    "rangy": "^1.3.0",
+    "@myrmidon/cadmus-admin": "^0.0.3",
+    "@myrmidon/cadmus-api": "^0.0.3",
+    "@myrmidon/cadmus-core": "^0.0.2",
+    "@myrmidon/cadmus-item-editor": "^0.0.3",
+    "@myrmidon/cadmus-item-list": "^0.0.3",
+    "@myrmidon/cadmus-item-search": "^0.0.3",
+    "@myrmidon/cadmus-login": "^0.0.3",
+    "@myrmidon/cadmus-material": "^0.0.2",
+    "@myrmidon/cadmus-part-general-pg": "^0.0.3",
+    "@myrmidon/cadmus-part-general-ui": "^0.0.3",
+    "@myrmidon/cadmus-part-philology-pg": "^0.0.3",
+    "@myrmidon/cadmus-part-philology-ui": "^0.0.3",
+    "@myrmidon/cadmus-reset-password": "^0.0.3",
+    "@myrmidon/cadmus-state": "^0.0.3",
+    "@myrmidon/cadmus-thesaurus-editor": "^0.0.3",
+    "@myrmidon/cadmus-thesaurus-list": "^0.0.3",
+    "@myrmidon/cadmus-ui": "^0.0.3",
+    "@myrmidon/cadmus-ui-pg": "^0.0.3",
+    "@myrmidon/cadmus-user": "^0.0.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1001.4",
