--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,12 +39,12 @@ services:
     image: vedph2020/cadmus_itinera_api:1.0.0
     ports:
       # https://stackoverflow.com/questions/48669548/why-does-aspnet-core-start-on-port-80-from-within-docker
-      - 60380:80
+      - 54183:80
     depends_on:
       - cadmus-mongo
       - cadmus-index
     # wait for mongo before starting: https://github.com/vishnubob/wait-for-it
-    command: ["./wait-for-it.sh", "cadmus-mongo:27017", "--", "dotnet", "CadmusApi.dll"]
+    command: ["./wait-for-it.sh", "cadmus-mongo:27017", "--", "dotnet", "CadmusItineraApi.dll"]
     environment:
       # for Windows use : as separator, for non Windows use __
       # (see https://github.com/aspnet/Configuration/issues/469)
