--- a/docker-compose_linux-vol.yml
+++ b/docker-compose_linux-vol.yml
@@ -1,7 +1,7 @@
 # Modified compose version using volumes in a Linux-based host.
 # MongoDB: localhost:27017, host folder: /var/db/mongo
 # MySql: localhost:3306, host folder: /var/db/mysql
-# API: localhost:60380
+# API: localhost:54183
 # web: localhost:4200
 
 version: '3.7'
@@ -49,12 +49,12 @@ services:
     image: vedph2020/cadmus_api:1.0.1
     ports:
       # https://stackoverflow.com/questions/48669548/why-does-aspnet-core-start-on-port-80-from-within-docker
-      - 60380:80
+      - 54183:80
     depends_on:
       - cadmus-mongo
       - cadmus-index
     # wait for mongo before starting: https://github.com/vishnubob/wait-for-it
-    command: ["./wait-for-it.sh", "cadmus-mongo:27017", "--", "dotnet", "CadmusApi.dll"]
+    command: ["./wait-for-it.sh", "cadmus-mongo:27017", "--", "dotnet", "CadmusItineraApi.dll"]
     environment:
       # for Windows use : as separator, for non Windows use __
       # (see https://github.com/aspnet/Configuration/issues/469)
@@ -68,7 +68,7 @@ services:
       - SENDGRID__SENDEREMAIL=info@cadmus.com
       - SENDGRID__SENDERNAME=cadmus
       - SENDGRID__APIKEY=todo
-      - SERILOG__CONNECTIONSTRING=mongodb://cadmus-mongo:27017/cadmus-logs
+      - SERILOG__CONNECTIONSTRING=mongodb://cadmus-mongo:27017/cadmus-itinera-log
       - STOCKUSERS__0__PASSWORD=P4ss-W0rd!
     networks:
       - cadmus-network
