--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,3 @@
-/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "compileOnSave": false,
   "compilerOptions": {
@@ -16,6 +15,32 @@
       "es2018",
       "dom"
     ],
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "paths": {
+      "@myrmidon/cadmus-itinera-part-lt-ui": [
+        "dist/myrmidon/cadmus-itinera-part-lt-ui/myrmidon-cadmus-itinera-part-lt-ui",
+        "dist/myrmidon/cadmus-itinera-part-lt-ui"
+      ],
+      "@myrmidon/cadmus-itinera-part-lt-pg": [
+        "dist/myrmidon/cadmus-itinera-part-lt-pg/myrmidon-cadmus-itinera-part-lt-pg",
+        "dist/myrmidon/cadmus-itinera-part-lt-pg"
+      ],
+      "@myrmidon/cadmus-itinera-part-ms-ui": [
+        "dist/myrmidon/cadmus-itinera-part-ms-ui/myrmidon-cadmus-itinera-part-ms-ui",
+        "dist/myrmidon/cadmus-itinera-part-ms-ui"
+      ],
+      "@myrmidon/cadmus-itinera-part-ms-pg": [
+        "dist/myrmidon/cadmus-itinera-part-ms-pg/myrmidon-cadmus-itinera-part-ms-pg",
+        "dist/myrmidon/cadmus-itinera-part-ms-pg"
+      ],
+      "@myrmidon/cadmus-itinera-core": [
+        "dist/myrmidon/cadmus-itinera-core/myrmidon-cadmus-itinera-core",
+        "dist/myrmidon/cadmus-itinera-core"
+      ],
+      "@myrmidon/cadmus-itinera-ui": [
+        "dist/myrmidon/cadmus-itinera-ui/myrmidon-cadmus-itinera-ui",
+        "dist/myrmidon/cadmus-itinera-ui"
+      ]
+    }
   }
 }
