--- a/projects/myrmidon/cadmus-itinera-part-lt-pg/package.json
+++ b/projects/myrmidon/cadmus-itinera-part-lt-pg/package.json
@@ -5,6 +5,7 @@
     "@angular/common": "^10.1.4",
     "@angular/core": "^10.1.4",
     "@angular/forms": "^10.1.4",
+    "@angular/router": "^10.1.4",
     "@myrmidon/cadmus-material": "^0.0.1",
     "@myrmidon/cadmus-itinera-part-lt-ui": "^0.0.1"
   },
