--- a/projects/myrmidon/cadmus-itinera-part-lt-pg/package.json
+++ b/projects/myrmidon/cadmus-itinera-part-lt-pg/package.json
@@ -7,6 +7,7 @@
     "@angular/forms": "^10.1.4",
     "@angular/router": "^10.1.4",
     "@myrmidon/cadmus-material": "^0.0.1",
+    "@myrmidon/cadmus-ui-pg": "^0.0.1",
     "@myrmidon/cadmus-itinera-part-lt-ui": "^0.0.1"
   },
   "dependencies": {
