--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build-core": "ng build @myrmidon/cadmus-itinera-core --prod && ng build @myrmidon/cadmus-itinera-ui --prod",
     "build-lt": "ng build @myrmidon/cadmus-itinera-part-lt-ui --prod && ng build @myrmidon/cadmus-itinera-part-lt-pg --prod",
     "build-ms": "ng build @myrmidon/cadmus-itinera-part-ms-ui --prod && ng build @myrmidon/cadmus-itinera-part-ms-pg --prod",
-    "build-all": "npm run-script build-lib-core && npm run-script build-lib-lt && npm run-script build-lib-ms"
+    "build-all": "npm run-script build-core && npm run-script build-lt && npm run-script build-ms"
   },
   "private": true,
   "dependencies": {
