--- a/projects/myrmidon/cadmus-itinera-part-lt-ui/package.json
+++ b/projects/myrmidon/cadmus-itinera-part-lt-ui/package.json
@@ -5,6 +5,7 @@
     "@angular/common": "^10.1.4",
     "@angular/core": "^10.1.4",
     "@myrmidon/cadmus-core": "^0.0.1",
+    "@myrmidon/cadmus-material": "^0.0.1",
     "@myrmidon/cadmus-itinera-core": "^0.0.1",
     "@myrmidon/cadmus-itinera-ui": "^0.0.1"
   },
