--- a/projects/myrmidon/cadmus-itinera-part-ms-pg/package.json
+++ b/projects/myrmidon/cadmus-itinera-part-ms-pg/package.json
@@ -3,7 +3,12 @@
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^10.1.4",
-    "@angular/core": "^10.1.4"
+    "@angular/core": "^10.1.4",
+    "@angular/forms": "^10.1.4",
+    "@angular/router": "^10.1.4",
+    "@myrmidon/cadmus-material": "^0.0.1",
+    "@myrmidon/cadmus-ui-pg": "^0.0.1",
+    "@myrmidon/cadmus-itinera-part-ms-ui": "^0.0.1"
   },
   "dependencies": {
     "tslib": "^2.0.0"
