--- a/docker-compose_linux-vol.yml
+++ b/docker-compose_linux-vol.yml
@@ -46,7 +46,7 @@ services:
       - cadmus-network
 
   cadmus-api:
-    image: vedph2020/cadmus_api:1.0.1
+    image: vedph2020/cadmus_itinera_api:1.0.0
     ports:
       # https://stackoverflow.com/questions/48669548/why-does-aspnet-core-start-on-port-80-from-within-docker
       - 54183:80
@@ -59,8 +59,8 @@ services:
       # for Windows use : as separator, for non Windows use __
       # (see https://github.com/aspnet/Configuration/issues/469)
       - CONNECTIONSTRINGS__DEFAULT=mongodb://cadmus-mongo:27017/{0}
-      - CONNECTIONSTRINGS__INDEX=Server=cadmus-index;port=3306;Database={0};Uid=root;Pwd=mysql
-      - SEED__INDEXDELAY=35
+      - CONNECTIONSTRINGS__INDEX=Server=cadmus-itinera-index;port=3306;Database={0};Uid=root;Pwd=mysql
+      - SEED__INDEXDELAY=50
       - MESSAGING__APIROOTURL=http://cadmusapi.azurewebsites.net
       - MESSAGING__APPROOTURL=http://cadmusapi.com/
       - MESSAGING__SUPPORTEMAIL=support@cadmus.com
@@ -74,7 +74,7 @@ services:
       - cadmus-network
 
   cadmus-web:
-    image: vedph2020/cadmus_shell:1.0.3
+    image: vedph2020/cadmus-itinera-app:1.0.1
     ports:
       - 4200:80
     depends_on:
