--- a/package.json
+++ b/package.json
@@ -20,28 +20,20 @@
     "@angular/common": "~11.1.1",
     "@angular/compiler": "~11.1.1",
     "@angular/core": "~11.1.1",
+    "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "~11.1.1",
     "@angular/material": "^11.1.1",
     "@angular/platform-browser": "~11.1.1",
     "@angular/platform-browser-dynamic": "~11.1.1",
     "@angular/router": "~11.1.1",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.2",
-    "@angular/flex-layout": "^11.0.0-beta.33",
     "@auth0/angular-jwt": "^5.0.1",
     "@datorama/akita": "^5.2.3",
     "@datorama/akita-ngdevtools": "^5.0.3",
-    "@types/diff-match-patch": "^1.0.32",
-    "diff-match-patch": "^1.0.5",
-    "gravatar": "^1.8.1",
-    "moment": "^2.28.0",
-    "ngx-markdown": "^10.1.1",
-    "ngx-moment": "^5.0.0",
-    "ngx-monaco-editor": "^9.0.0",
-    "rangy": "^1.3.0",
     "@myrmidon/cadmus-admin": "0.0.6",
     "@myrmidon/cadmus-api": "0.0.9",
+    "@myrmidon/cadmus-biblio-api": "0.0.1",
+    "@myrmidon/cadmus-biblio-core": "0.0.1",
+    "@myrmidon/cadmus-biblio-ui": "0.0.1",
     "@myrmidon/cadmus-core": "0.0.15",
     "@myrmidon/cadmus-item-editor": "0.0.10",
     "@myrmidon/cadmus-item-list": "0.0.6",
@@ -58,7 +50,18 @@
     "@myrmidon/cadmus-thesaurus-list": "0.0.5",
     "@myrmidon/cadmus-ui": "0.0.25",
     "@myrmidon/cadmus-ui-pg": "0.0.7",
-    "@myrmidon/cadmus-user": "0.0.5"
+    "@myrmidon/cadmus-user": "0.0.5",
+    "@types/diff-match-patch": "^1.0.32",
+    "diff-match-patch": "^1.0.5",
+    "gravatar": "^1.8.1",
+    "moment": "^2.28.0",
+    "ngx-markdown": "^10.1.1",
+    "ngx-moment": "^5.0.0",
+    "ngx-monaco-editor": "^9.0.0",
+    "rangy": "^1.3.0",
+    "rxjs": "~6.6.0",
+    "tslib": "^2.0.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1101.1",
