Docker: bibliography API layer

--- a/docker-compose_linux-vol.yml
+++ b/docker-compose_linux-vol.yml
@@ -2,6 +2,7 @@
 # MongoDB: localhost:27017, host folder: /var/db/mongo
 # MySql: localhost:3306, host folder: /var/db/mysql
 # API: localhost:54183
+# biblio API: localhost:61691
 # web: localhost:4200
 
 version: '3.7'
@@ -26,9 +27,9 @@ services:
   # https://github.com/docker-library/docs/tree/master/mysql#mysql_database
   # https://docs.docker.com/samples/library/mysql/#environment-variables
   # https://github.com/docker-library/mysql/issues/275 (troubleshooting connection)
-  cadmus-index:
+  cadmus-mysql:
     image: mysql
-    container_name: cadmus-index
+    container_name: cadmus-mysql
     # https://github.com/docker-library/mysql/issues/454
     command: --default-authentication-plugin=mysql_native_password
     environment:
@@ -46,20 +47,20 @@ services:
       - cadmus-network
 
   cadmus-api:
-    image: vedph2020/cadmus_itinera_api:1.0.22
+    image: vedph2020/cadmus_itinera_api:1.0.23
     ports:
       # https://stackoverflow.com/questions/48669548/why-does-aspnet-core-start-on-port-80-from-within-docker
       - 54183:80
     depends_on:
       - cadmus-mongo
-      - cadmus-index
+      - cadmus-mysql
     # wait for mongo before starting: https://github.com/vishnubob/wait-for-it
     command: ["./wait-for-it.sh", "cadmus-mongo:27017", "--", "dotnet", "CadmusItineraApi.dll"]
     environment:
       # for Windows use : as separator, for non Windows use __
       # (see https://github.com/aspnet/Configuration/issues/469)
       - CONNECTIONSTRINGS__DEFAULT=mongodb://cadmus-mongo:27017/{0}
-      - CONNECTIONSTRINGS__INDEX=Server=cadmus-index;port=3306;Database={0};Uid=root;Pwd=mysql
+      - CONNECTIONSTRINGS__INDEX=Server=cadmus-mysql;port=3306;Database={0};Uid=root;Pwd=mysql
       - SEED__INDEXDELAY=50
       - MESSAGING__APIROOTURL=http://cadmusapi.azurewebsites.net
       - MESSAGING__APPROOTURL=http://cadmusapi.com/
@@ -73,8 +74,24 @@ services:
     networks:
       - cadmus-network
 
+  cadmus-biblio-api:
+    image: vedph2020/cadmus_biblio_api:1.0.5
+    ports:
+      - 61691:80
+    depends_on:
+      - cadmus-mongo
+      - cadmus-mysql
+    environment:
+      - CONNECTIONSTRINGS__DEFAULT=mongodb://cadmus-mongo:27017/{0}
+      - CONNECTIONSTRINGS__BIBLIO=Server=cadmus-mysql;port=3306;Database={0};Uid=root;Pwd=mysql
+      - SEED__BIBLIODELAY=50
+      - SERILOG__CONNECTIONSTRING=mongodb://cadmus-mongo:27017/{0}-log
+      - STOCKUSERS__0__PASSWORD=P4ss-W0rd!
+    networks:
+      - cadmus-network
+
   cadmus-web:
-    image: vedph2020/cadmus-itinera-app:1.0.21
+    image: vedph2020/cadmus-itinera-app:1.0.22
     ports:
       - 4200:80
     depends_on:
